style: add stars effect

--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="scroll-down-animation.css" />
     <link rel="stylesheet" href="modal.css">
+    <link rel="stylesheet" href="stars.css">
 
   
     <title>Nhat Vu's Porfolio</title>
   </head>
   <body>
     <section>
+      <div class="lines">
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  <div class="line"></div>
+  
+</div>
       <div class="navbar-container">
         <nav class="navbar">
           <div class="container-fluid d-flex justify-content-center">
