fix: update button text from 'Learn More' to 'Close' in project modal

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Mediatrix's ACUP
         data-title="BrainRot Translator"
         data-description="This is a cool tool for meme lovers."
         >
-  Learn More
+  Close
 </button>
 
       </div>
