fix: update hero section heading for improved clarity

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 
     <div class="hero text-center">
-      <h2>Nhat Vu</h2>
-      <h3>Web Developer | Designer | Creator</h3>
+      <h2>Hello</h2>
+      <h3>I'm Nhat Vu</h3>
       <p>I turn ideas into beautiful, functional experiences.</p>
       <div
         class="d-flex flex-column align-items-center gap-2""
